--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     the `--base-href` argument provided to `flutter build`.
   -->
 
-  <base href="https://ramazangulsen.github.io/toccotocomotif/">
+  <base href="https://toccoapp.github.io/tocco/">
   
 
   <meta charset="UTF-8">
